tests/out/t033backtrackingParser.dart
// $ANTLR 3.4 t033backtrackingParser.g 2012-06-07 21:59:49
#library('dart:dartlr');

#import('dart:io');
#import('../../src/DartLRLib.dart');

/** ANSI C ANTLR v3 grammar

Translated from Jutta Degener's 1995 ANSI C yacc grammar by Terence Parr
July 2006.  The lexical rules were taken from the Java grammar.

Jutta says: "In 1985, Jeff Lee published his Yacc grammar (which
is accompanied by a matching Lex specification) for the April 30, 1985 draft
version of the ANSI C standard.  Tom Stockfisch reposted it to net.sources in
1987; that original, as mentioned in the answer to question 17.25 of the
comp.lang.c FAQ, can be ftp'ed from ftp.uu.net,
   file usenet/net.sources/ansi.c.grammar.Z.
I intend to keep this version as close to the current C Standard grammar as
possible; please let me know if you discover discrepancies. Jutta Degener, 1995"

Generally speaking, you need symbol table info to parse C; typedefs
define types and then IDENTIFIERS are either types or plain IDs.  I'm doing
the min necessary here tracking only type names.  This is a good example
of the global scope (called Symbols).  Every rule that declares its usage
of Symbols pushes a new copy on the stack effectively creating a new
symbol scope.  Also note rule declaration declares a rule scope that
lets any invoked rule see isTypedef boolean.  It's much easier than
passing that info down as parameters.  Very clean.  Rule
direct_declarator can then easily determine whether the IDENTIFIER
should be declared as a type name.

I have only tested this on a single file, though it is 3500 lines.

This grammar requires ANTLR v3.0.1 or higher.

Terence Parr
July 2006
*/
class t033backtrackingParser extends Parser {

  static final List<String> _tokenNames = const [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARACTER_LITERAL", "COMMENT", 
    "DECIMAL_LITERAL", "EscapeSequence", "Exponent", "FLOATING_POINT_LITERAL", 
    "FloatTypeSuffix", "HEX_LITERAL", "HexDigit", "IDENTIFIER", "IntegerTypeSuffix", 
    "LETTER", "LINE_COMMAND", "LINE_COMMENT", "OCTAL_LITERAL", "OctalEscape", 
    "STRING_LITERAL", "UnicodeEscape", "WS", "'!'", "'!='", "'%'", "'%='", 
    "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", 
    "','", "'-'", "'--'", "'-='", "'->'", "'.'", "'...'", "'/'", "'/='", 
    "':'", "';'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", 
    "'>='", "'>>'", "'>>='", "'?'", "'['", "']'", "'^'", "'^='", "'auto'", 
    "'break'", "'case'", "'char'", "'const'", "'continue'", "'default'", 
    "'do'", "'double'", "'else'", "'enum'", "'extern'", "'float'", "'for'", 
    "'goto'", "'if'", "'int'", "'long'", "'register'", "'return'", "'short'", 
    "'signed'", "'sizeof'", "'static'", "'struct'", "'switch'", "'typedef'", 
    "'union'", "'unsigned'", "'void'", "'volatile'", "'while'", "'{'", "'|'", 
    "'|='", "'||'", "'}'", "'~'"
  ];

  static final int EOF = -1;
  static final int T__23 = 23;
  static final int T__24 = 24;
  static final int T__25 = 25;
  static final int T__26 = 26;
  static final int T__27 = 27;
  static final int T__28 = 28;
  static final int T__29 = 29;
  static final int T__30 = 30;
  static final int T__31 = 31;
  static final int T__32 = 32;
  static final int T__33 = 33;
  static final int T__34 = 34;
  static final int T__35 = 35;
  static final int T__36 = 36;
  static final int T__37 = 37;
  static final int T__38 = 38;
  static final int T__39 = 39;
  static final int T__40 = 40;
  static final int T__41 = 41;
  static final int T__42 = 42;
  static final int T__43 = 43;
  static final int T__44 = 44;
  static final int T__45 = 45;
  static final int T__46 = 46;
  static final int T__47 = 47;
  static final int T__48 = 48;
  static final int T__49 = 49;
  static final int T__50 = 50;
  static final int T__51 = 51;
  static final int T__52 = 52;
  static final int T__53 = 53;
  static final int T__54 = 54;
  static final int T__55 = 55;
  static final int T__56 = 56;
  static final int T__57 = 57;
  static final int T__58 = 58;
  static final int T__59 = 59;
  static final int T__60 = 60;
  static final int T__61 = 61;
  static final int T__62 = 62;
  static final int T__63 = 63;
  static final int T__64 = 64;
  static final int T__65 = 65;
  static final int T__66 = 66;
  static final int T__67 = 67;
  static final int T__68 = 68;
  static final int T__69 = 69;
  static final int T__70 = 70;
  static final int T__71 = 71;
  static final int T__72 = 72;
  static final int T__73 = 73;
  static final int T__74 = 74;
  static final int T__75 = 75;
  static final int T__76 = 76;
  static final int T__77 = 77;
  static final int T__78 = 78;
  static final int T__79 = 79;
  static final int T__80 = 80;
  static final int T__81 = 81;
  static final int T__82 = 82;
  static final int T__83 = 83;
  static final int T__84 = 84;
  static final int T__85 = 85;
  static final int T__86 = 86;
  static final int T__87 = 87;
  static final int T__88 = 88;
  static final int T__89 = 89;
  static final int T__90 = 90;
  static final int T__91 = 91;
  static final int T__92 = 92;
  static final int T__93 = 93;
  static final int T__94 = 94;
  static final int T__95 = 95;
  static final int T__96 = 96;
  static final int T__97 = 97;
  static final int T__98 = 98;
  static final int T__99 = 99;
  static final int T__100 = 100;
  static final int CHARACTER_LITERAL = 4;
  static final int COMMENT = 5;
  static final int DECIMAL_LITERAL = 6;
  static final int EscapeSequence = 7;
  static final int Exponent = 8;
  static final int FLOATING_POINT_LITERAL = 9;
  static final int FloatTypeSuffix = 10;
  static final int HEX_LITERAL = 11;
  static final int HexDigit = 12;
  static final int IDENTIFIER = 13;
  static final int IntegerTypeSuffix = 14;
  static final int LETTER = 15;
  static final int LINE_COMMAND = 16;
  static final int LINE_COMMENT = 17;
  static final int OCTAL_LITERAL = 18;
  static final int OctalEscape = 19;
  static final int STRING_LITERAL = 20;
  static final int UnicodeEscape = 21;
  static final int WS = 22;
  
  List<Parser> get delegates() => <Parser>[]; 
  
      
  List Symbols_stack;

  Map<String, DFA> dfas;

  List declaration_stack;


  t033backtrackingParser(TokenStream input) 
    : super.fromRecognizerSharedState(input, new RecognizerSharedState()) {
	  this.dfas = new Map<String, DFA>();
	  this.declaration_stack = new List();

	  this.Symbols_stack = new List();
	  this.state.ruleMemo = new List<Map>(213+1);

	  this.dfas["dfa52"] = new DFA52(this);
	  this.dfas["dfa64"] = new DFA64(this);
  }



  t033backtrackingParser.fromRecognizerSharedState
    (TokenStream input, RecognizerSharedState state) 
      : super.fromRecognizerSharedState(input, state) {
    this.dfas = new Map<String, DFA>();
    this.declaration_stack = new List();

    this.Symbols_stack = new List();    
    this.state.ruleMemo = new List<Map>(213+1);

    this.dfas["dfa52"] = new DFA52(this);
    this.dfas["dfa64"] = new DFA64(this);
  }    

  List<String> get tokenNames() => t033backtrackingParser._tokenNames;

  String get grammarFileName() => "t033backtracking.g";

  String getRecognizerClassName() => "t033backtrackingParser";


  bool isTypeName(String name) {
    for (int i = Symbols_stack.length-1; i >=0; i--) {
  	_Symbols_scope scope = Symbols_stack[i];
  	if (scope.types.contains(name)) {
  	  return true;
  	}
    }
    return false;
  }


  // $ANTLR start "translation_unit"
  /* ../runtime/dart/tests/grammars/t033backtracking.g:
   57:1: translation_unit : ( external_declaration )+ ;*/
  void translation_unit() {
    this.Symbols_stack.add(new _Symbols_scope());

    int translation_unit_StartIndex = this.input.index;


      this.Symbols_stack.last().types = new Set();

    try {
      if(this.state.backtracking > 0 && 
               this.alreadyParsedRule(this.input, 1)) { 
        return ; 
      }

      /* ../runtime/dart/tests/grammars/t033backtracking.g:
       62:2: ( ( external_declaration )+ )*/
      /* ../runtime/dart/tests/grammars/t033backtracking.g:
       62:4: ( external_declaration )+*/
      {
      	/* ../runtime/dart/tests/grammars/t033backtracking.g:
      	 62:4: ( external_declaration )+*/
      	int cnt1 = 0;
      	loop1:
      	do {
      	  int alt1 = 2;
      	  int LA1_0 = this.input.LA(1);

      	  if((LA1_0 == 13/*IDENTIFIER*/
      	    || LA1_0 == 30/*30*/
      	    || LA1_0 == 32/*32*/
      	    || LA1_0 == 63/*63*/
      	    || (LA1_0 >= 66 && LA1_0 <= 67)
      	    || LA1_0 == 71/*71*/
      	    || (LA1_0 >= 73 && LA1_0 <= 75)
      	    || (LA1_0 >= 79 && LA1_0 <= 81)
      	    || (LA1_0 >= 83 && LA1_0 <= 84)
      	    || (LA1_0 >= 86 && LA1_0 <= 87)
      	    || (LA1_0 >= 89 && LA1_0 <= 93))) {
      	    alt1 = 1;
      	  }


      	  switch (alt1) {
      			case 1 :
      			  /* ../runtime/dart/tests/grammars/t033backtracking.g:
      			   62:4: external_declaration*/
      			  {
      			  	this.pushFollow(FOLLOW_external_declaration_in_translation_unit77);
      			  	this.external_declaration();

      			  	this.state.fsp--;
      			  	if(this.state.failed) 
      			  	  return ;

      			  }
      			  break;

      			default :
      		    if(cnt1 >= 1) break loop1;
      		      if(this.state.backtracking > 0) {
      		        this.state.failed = true; 
      		        return ;
      		      }
      	        EarlyExitException eee = new EarlyExitException(1, this.input);
      	        throw eee;
      	  }
      	  cnt1++;
      	} while(true);


      }

    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
    }

  	finally {
  	  // do for sure before leaving
      if(this.state.backtracking > 0) { 
        this.memoize(this.input, 1, translation_unit_StartIndex); 
      }

      this.Symbols_stack.removeLast();

  	}
  	return ;
  }
  // $ANTLR end "translation_unit"


  // $ANTLR start "external_declaration"
  /* ../runtime/dart/tests/grammars/t033backtracking.g:
   79:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | 
   declaration );*/
  void external_declaration() {
    int external_declaration_StartIndex = this.input.index;

    try {
      if(this.state.backtracking > 0 && 
               this.alreadyParsedRule(this.input, 2)) { 
        return ; 
      }

      /* ../runtime/dart/tests/grammars/t033backtracking.g: 
       81:2: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | 
       declaration )*/
      int alt2 = 2;
      int LA2_0 = this.input.LA(1);

      if((LA2_0 == 63/*63*/
        || LA2_0 == 74/*74*/
        || LA2_0 == 81/*81*/
        || LA2_0 == 86/*86*/)) {
        int LA2_1 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 1, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 92/*92*/)) {
        int LA2_2 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 2, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 66/*66*/)) {
        int LA2_3 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 3, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 83/*83*/)) {
        int LA2_4 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 4, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 79/*79*/)) {
        int LA2_5 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 5, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 80/*80*/)) {
        int LA2_6 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 6, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 75/*75*/)) {
        int LA2_7 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 7, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 71/*71*/)) {
        int LA2_8 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 8, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 84/*84*/)) {
        int LA2_9 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 9, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 91/*91*/)) {
        int LA2_10 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 10, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 87/*87*/
        || LA2_0 == 90/*90*/)) {
        int LA2_11 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 11, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 73/*73*/)) {
        int LA2_12 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 12, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 13/*IDENTIFIER*/)) {
        int LA2_13 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if(((isTypeName(input.LT(1).text)))) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 13, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 67/*67*/
        || LA2_0 == 93/*93*/)) {
        int LA2_14 = this.input.LA(2);

        if((synpred4_t033backtracking())) {
          alt2 = 1;
        }
        else if((true)) {
          alt2 = 2;
        }
        else {
          if(this.state.backtracking > 0) {
            this.state.failed = true; 
            return ;
          }
          NoViableAltException nvae =
              new NoViableAltException("", 2, 14, this.input);

          throw nvae;

        }
      }
      else if((LA2_0 == 32/*32*/) && (synpred4_t033backtracking())) {
        alt2 = 1;
      }
      else if((LA2_0 == 30/*30*/) && (synpred4_t033backtracking())) {
        alt2 = 1;
      }
      else if((LA2_0 == 89/*89*/)) {
        alt2 = 2;
      }
      else {
        if(this.state.backtracking > 0) {
          this.state.failed = true; 
          return ;
        }
        NoViableAltException nvae =
            new NoViableAltException("", 2, 0, this.input);

        throw nvae;

      }
      switch (alt2) {
        case 1 :
          /* ../runtime/dart/tests/grammars/t033backtracking.g:
           81:4: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition*/
          {
          	this.pushFollow(FOLLOW_function_definition_in_external_declaration113);
          	this.function_definition();

          	this.state.fsp--;
          	if(this.state.failed) 
          	  return ;

          }
          break;
        case 2 :
          /* ../runtime/dart/tests/grammars/t033backtracking.g:
           82:4: declaration*/
          {
          	this.pushFollow(FOLLOW_declaration_in_external_declaration118);
          	this.declaration();

          	this.state.fsp--;
          	if(this.state.failed) 
          	  return ;

          }
          break;

      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
    }

  	finally {
  	  // do for sure before leaving
      if(this.state.backtracking > 0) { 
        this.memoize(this.input, 2, external_declaration_StartIndex); 
      }

  	}
  	return ;
  }
  // $ANTLR end "external_declaration"


  // $ANTLR start "function_definition"
  /* ../runtime/dart/tests/grammars/t033backtracking.g:
   85:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | 
   compound_statement ) ;*/
  void function_definition() {
    this.Symbols_stack.add(new _Symbols_scope());

    int function_definition_StartIndex = this.input.index;


      this.Symbols_stack.last().types = new HashSet();

    try {
      if(this.state.backtracking > 0 && 
               this.alreadyParsedRule(this.input, 3)) { 
        return ; 
      }

      /* ../runtime/dart/tests/grammars/t033backtracking.g:
       90:2: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | 
       compound_statement ) )*/
      /* ../runtime/dart/tests/grammars/t033backtracking.g:
       90:4: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | 
       compound_statement )*/
      {
      	/* ../runtime/dart/tests/grammars/t033backtracking.g:
      	 90:4: ( declaration_specifiers )?*/
      	int alt3 = 2;
      	int LA3_0 = this.input.LA(1);

      	if((LA3_0 == 63/*63*/
      	  || (LA3_0 >= 66 && LA3_0 <= 67)
      	  || LA3_0 == 71/*71*/
      	  || (LA3_0 >= 73 && LA3_0 <= 75)
      	  || (LA3_0 >= 79 && LA3_0 <= 81)
      	  || (LA3_0 >= 83 && LA3_0 <= 84)
      	  || (LA3_0 >= 86 && LA3_0 <= 87)
      	  || (LA3_0 >= 90 && LA3_0 <= 93))) {
      	  alt3 = 1;
      	}
      	else if((LA3_0 == 13/*IDENTIFIER*/)) {
      	  switch(this.input.LA(2)) {
      	    case 32:
      	      {
      	      alt3 = 1;
      	      }
      	      break;
      	    case IDENTIFIER:
      	      {
      	      int LA3_18 = this.input.LA(3);

      	      if(((((isTypeName(input.LT(1).text))&&(isTypeName(input.LT(1).text)))&&synpred5_t033backtracking()))) {
      	        alt3 = 1;
      	      }
      	      }
      	      break;
      	    case 30:
      	      {
      	      int LA3_19 = this.input.LA(3);
